# AVC

./: .SRCINFO  .clang-format  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING  Makefile  Makefile.legacy  PKGBUILD  README.md  USAGE.md  confidentrial.patch  index-v2.patch
agcl/: agcl.c  fast_agcl.c  fast_agcl.h
api/: avc.h
docs/: AGCL_USAGE.md  BUILD.md  IMPORTANT_NOTES.md  USAGE.md  WORKFLOW_SAMPLE.md
include/: avc.h
src/: main.c
src/commands/: add.c  clean.c  commands.h  commit.c  init.c  log.c  migrate.c  reset.c  rm.c  shared.c  status.c  version.c
src/core/: compression.c  compression.h  fast_index.c  fast_index.h  hash.c  hash.h  index.c  index.h  memory_pool.c  memory_pool.h  objects.c  objects.h  repository.c  repository.h  repository_format.c  repository_format.h  reset.c  reset.h
src/utils/: arg_parser.c  arg_parser.h  file_utils.c  file_utils.h  string_utils.c  string_utils.h  tui.c  tui.h
